--- a/myapp/package.json
+++ b/myapp/package.json
@@ -17,6 +17,7 @@
     "http-errors": "^1.6.3",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
+    "nodemailer": "^6.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.9.0",
