--- a/myapp/package.json
+++ b/myapp/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "ejs": "^2.5.9",
     "express": "~4.16.0",
+    "express-recaptcha": "^5.0.0",
     "express-session": "^1.15.6",
     "http-errors": "^1.6.3",
     "morgan": "~1.9.0",
